Sun Jun 11 02:33:32 1995  Tom Yu  (tlyu@dragons-lair)

	* configure.in: fix intial value of CDEFS_INCLUDE so that make
		check doesn't end up with a "-I "

Fri Jun  9 19:00:00 1995    <tytso@rsx-11.mit.edu>

	* configure.in: Remove standardized set of autoconf macros, which
		are now handled by CONFIG_RULES.

Wed Jun  7 09:27:39 1995  Theodore Y. Ts'o  <tytso@lurch.mit.edu>

	* configure.in (CDEFS_INCLUDE): /bin/sh doesn't grok $(foo); it
		wants ${foo}!

Tue May 30 10:42:06 EDT 1995	Paul Park	(pjpark@mit.edu)
	* configure.in: Check for sys/cdefs.h.
	* Makefile.in: If sys/cdefs.h present, don't use the one in PORT/krb5.

Tue May 30 06:30:08 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* Makefile.in (CFLAGS): Added $(DEFS) so that configure determined
		CFLAGS can be included

	* configure.in: Added CHECK_SIGNALS
