@@ -7,4 +7,5 @@ dnl
 CDEFS_INCLUDE=['-I$(PORTDIR)']
 AC_HAVE_HEADERS(sys/cdefs.h, CDEFS_INCLUDE=)
 AC_SUBST(CDEFS_INCLUDE)
+AC_FUNC_CHECK(index,AC_DEFINE(HAVE_INDEX))
 V5_AC_OUTPUT_MAKEFILE
